added unzipping util func, finally got the data

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -24,42 +24,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello, World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import tensorflow as tf \n",
     "import pandas as pd \n",
     "import sklearn\n",
     "import os\n",
+    "import seaborn as sns \n",
+    "\n",
+    "\n",
     "import util"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Current tensorflow version= 2.3.0\nNum GPUs Available:  1\nIs built with CUDA:  True\n\nList of detected devices and attributes:\n [name: \"/device:CPU:0\"\ndevice_type: \"CPU\"\nmemory_limit: 268435456\nlocality {\n}\nincarnation: 8866263660853728195\n, name: \"/device:XLA_CPU:0\"\ndevice_type: \"XLA_CPU\"\nmemory_limit: 17179869184\nlocality {\n}\nincarnation: 6244616153193746338\nphysical_device_desc: \"device: XLA_CPU device\"\n, name: \"/device:GPU:0\"\ndevice_type: \"GPU\"\nmemory_limit: 9875649984\nlocality {\n  bus_id: 1\n  links {\n  }\n}\nincarnation: 232677241396619491\nphysical_device_desc: \"device: 0, name: GeForce RTX 2080 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n, name: \"/device:XLA_GPU:0\"\ndevice_type: \"XLA_GPU\"\nmemory_limit: 17179869184\nlocality {\n}\nincarnation: 4140296277673942709\nphysical_device_desc: \"device: XLA_GPU device\"\n]\n"
+      "Current tensorflow version = 2.3.0\n",
+      "Num GPUs Available:  1\n",
+      "Is built with CUDA:  True\n",
+      "\n",
+      "List of detected devices and attributes:\n",
+      " [name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 14956136834151795607\n",
+      ", name: \"/device:XLA_CPU:0\"\n",
+      "device_type: \"XLA_CPU\"\n",
+      "memory_limit: 17179869184\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 12295824282536892859\n",
+      "physical_device_desc: \"device: XLA_CPU device\"\n",
+      ", name: \"/device:GPU:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 9875649984\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 15684673035722060345\n",
+      "physical_device_desc: \"device: 0, name: GeForce RTX 2080 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
+      ", name: \"/device:XLA_GPU:0\"\n",
+      "device_type: \"XLA_GPU\"\n",
+      "memory_limit: 17179869184\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 16871952222283798741\n",
+      "physical_device_desc: \"device: XLA_GPU device\"\n",
+      "]\n"
      ]
     }
    ],
    "source": [
     "util.run_tf_check()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
